--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script src="js/huida.js"></script>
+<!--    <script src="js/huida.js"></script>-->
     <!-- built files will be auto injected -->
   </body>
 </html>
