--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+      <script src="https://jsuites.net/v4/jsuites.js"></script>
+      <link rel="stylesheet" href="https://jsuites.net/v4/jsuites.css" type="text/css" />
+<!--      <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Material+Icons" />-->
 <!--      <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">-->
   </head>
   <body>
